[gd_scene load_steps=4 format=3 uid="uid://bpuagx84a05ak"]

[ext_resource type="Script" path="res://Features/UI/PlacementItem.gd" id="1_ssun7"]
[ext_resource type="Theme" uid="uid://5m3hxsr6k2n8" path="res://GameTheme.tres" id="1_vxm4m"]
[ext_resource type="Texture2D" uid="uid://5lv0nxj7o2ht" path="res://Images/Objects/pinkheartbed.png" id="2_elo7i"]

[node name="PlacementItem" type="PanelContainer"]
theme = ExtResource("1_vxm4m")
script = ExtResource("1_ssun7")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_vxm4m")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="IconButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
texture_normal = ExtResource("2_elo7i")
ignore_texture_size = true
stretch_mode = 5

[node name="OutlineSprite" type="Sprite2D" parent="MarginContainer/VBoxContainer/IconButton"]
unique_name_in_owner = true
position = Vector2(100, 100)

[node name="ItemName" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Bed"
horizontal_alignment = 1
vertical_alignment = 1
